--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-# snwr
+<!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <meta charset="utf-8">
+        <title>Medecin</title>
+    <!--Code CSS pour faire le tableau, bordure, taille ect.-->
+    <style> 
+        table {
+            width: 25%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            text-align: center;
+        }
+        th {
+        background-color: #f2f2f2;
+    }
+    </style>
+    </head>
+<body>
+    <a href="CV.html"><h1>Cabinet médical du Dr Gillard</h1></a>
+    <a href="image/cabinetmedical.jpg"><img src="file:///K:/Tp_Duclot/TP4_activit%C3%A9s/image/cabinetmedical.jpg" alt="Cabinet medical de Dr Gillard" title="Cabinet medical de Dr Gillard"width="500" ></a>
+    <p>Bienvenue, je suis le Dr Gillard.
+        <br>Sur cette page vous trouverez des renseignements sur mon cabinet médical.
+        <br><h2>Horaires d'ouverture</h2>
+        <p>Le cabinet est ouvert tous les jours du Lundi au Samedi matin</p>
+    </style>
+</head>
+<body>
+    <h1>Horaires d'Ouverture (Lundi au Samedi)</h1>
+    
+    <table>
+        <tbody>
+            <tr>
+                <th>Lundi</th>
+                <td>9h-12h00</td>
+                <td>14h00-17h00</td>
+            </tr>
+            <tr>
+                <th>Mardi</th>
+                <td>9h-12h00</td>
+                <td>14h00-17h00</td>
+            </tr>
+            <tr>
+                <th>Mercredi</th>
+                <td>9h-12h00</td>
+                <td>14h00-17h00</td>
+            </tr>
+            <tr>
+                <th>Jeudi</th>
+                <td>9h-12h00</td>
+                <td>14h00-17h00</td>
+            </tr>
+            <tr>
+                <th>Vendredi</th>
+                <td>9h-12h00</td>
+                <td>14h00-17h00</td>
+            </tr>
+            <tr>
+                <th>Samedi</th>
+                <td>9h-12h00</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Dimanche</th>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+    <h2>En cas d'urgence</h2>
+    Pendant les heures d'ouverture, appelez le numéro du cabinet (01.XX.XX.XX.XX)<br>
+    Si vous ne pouvez pas me joindre, appelez le 15 (SAMU)<br>
+<br>En dehors des heures d'ouverture, le répondeur du cabinet vous donnera les coordonnées du médecin de garde
+<h2>Me joindre par internet</h2>
+<p>Si vous désirez me joindre, vous pouvez <a href="https://ordomedic.be/fr/contact">le formulaire de contact suivant<br></a>
+Je suis par ailleurs membre de démonstration des "Médecins Maîtres-Toile"MMT</p>
+<a href="Medicaments.html"><h2>Listes des 100 Medicaments</h2></a>
+</body>
+</html>
